# literary

./: .gitignore  LICENSE  MANIFEST.in  README.md  flake.nix  literary-hook.pth  literary_config.json  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.binder/: environment.yml  postBuild
.binder/settings/.jupyter/lab/user-settings/@jlab-enhanced/cell-toolbar/: plugin.jupyterlab-settings
.github/workflows/: ci-cd.yml  publish-package.yml  publish-pypi.yml  run-tests.yml
etc/ipython/: ipython_kernel_config.json
examples/: README.md  __init__.ipynb  absolute-importing.ipynb  imports.ipynb  pyproject.toml
examples/.ipynb_checkpoints/: __init__-checkpoint.ipynb  imports-checkpoint.ipynb
examples/package_a/: docstring.ipynb  exports.ipynb  importer.ipynb  patching.ipynb
examples/src/package_a/: __init__.ipynb  docstring.ipynb  exports.ipynb  importer.ipynb  patching.ipynb
literary/: __init__.py  __main__.py  build.py  build_meta.py  config.py  exporter.py  importer.py  notebook.py  package.py  preprocessor.py  testing.py  transformers.py  utils.py
literary/commands/: build.py  test.py
literary/notebook/: __init__.py  __main__.py  importer.py  patch.py  paths.py
share/jupyter/nbconvert/templates/literary/: conf.json  index.py.j2
src/literary/: __init__.ipynb  __main__.ipynb  __main__.py  app.ipynb  app.py  config.ipynb  exporter.ipynb  package.ipynb  package.py  preprocessor.ipynb  testing.ipynb  transformers.ipynb  utils.ipynb  utils.py
src/literary.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/literary/commands/: __init__.ipynb  __main__.ipynb  app.ipynb  build.ipynb  launcher.ipynb  test.ipynb  trait.ipynb
src/literary/config/: __init__.ipynb
src/literary/core/: __init__.ipynb  config.ipynb  exporter.ipynb  package.ipynb  preprocessor.ipynb  project.ipynb  test.ipynb  testing.ipynb  trait.ipynb  transformers.ipynb  utils.ipynb
src/literary/hook/: __init__.ipynb  finder.ipynb  importer.ipynb  loader.ipynb
src/literary/module/: __init__.ipynb  importer.ipynb
src/literary/notebook/: __init__.ipynb  __main__.ipynb  __main__.py  finder.ipynb  importer.ipynb  importer.py  loader.ipynb  patch.ipynb
src/literary/transpile/: __init__.ipynb  exporter.ipynb  filter.ipynb  patch.ipynb  preprocessor.ipynb  syntax.ipynb
tests/: test_patch.py
