[tool.poetry]
name = "literary"
version = "1.4.1"
description = "Literate package development with Jupyter"
readme = "README.md"
repository = "https://github.com/agoose77/literary"
authors = ["Angus Hollands <goosey15@gmail.com>"]
keywords = ["literate-programming", "notebook", "jupyter", "development"]

[tool.poetry.dependencies]
python = "^3.8"
astunparse = { version = "^1.6.3",  python = "<3.9" }
nbconvert = "^6.0.7"
nbclient = "^0.5.1"
nbformat = { version = "^5.0.8", extras = ["fast"] }
traitlets = "^5.0.5"
Jinja2 = "^2.11.2"
toml = "^0.10.2"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyterlab = "^3.0.8"
pytest = "^6.2.2"
tox = "^3.22.0"

[tool.poetry.scripts]
literary = 'literary.__main__:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
