[project]
name = "literary"
version = "3.0.2"
description = "Literate package development with Jupyter"
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
dependencies = [
    "nbformat[fast]>=5",
    "nbclient>=0.5.12",
    "nbconvert>=6.0",
    "traitlets>=5",
    "astunparse>=1.6; python_version < \"3.9\"",
    "ipython>=7.33.0",
    "typing-extensions>=3.10",
    "jupyter-core>=4.8",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"]
keywords = [
    "literate-programming",
    "jupyter",
    "notebooks",
    "nbconvert"
]

[project.urls]
"Repository" = "http://github.com/agoose77/literary"
"Bug Tracker" = "http://github.com/agoose77/literary/issues"

[project.scripts]
literary = "literary.commands.launcher:launch_new_instance"

[project.entry-points."nbconvert.exporters"]
literary = "literary.core.exporter:LiteraryExporter"

[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=3.4.0"
]

[tool.hatch.build]
only-packages = true
exclude = ["lib"]


[tool.hatch.build.targets.wheel.shared-data]
"share/jupyter/nbconvert/templates/literary/conf.json" = "share/jupyter/nbconvert/templates/literary/conf.json"
"share/jupyter/nbconvert/templates/literary/index.py.j2" = "share/jupyter/nbconvert/templates/literary/index.py.j2"


[tool.hatch.build.targets.wheel.hooks.literary]
dependencies = ["literary-build-hatch"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
