[metadata]
name = literary
version = 1.6.0
description = Literate package development with Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agoose77/literary
author = Angus Hollands
author_email = goosey15@gmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 4 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    literate-programming
    jupyter
    notebooks
    nbconvert
project_urls =
    Bug Tracker = https://github.com/agoose77/literary/issues

[options]
packages = find:
install_requires =
    nbformat[fast]>=4,<6
    nbclient>=0.5,<0.6
    nbconvert>=6,<7
    traitlets>=5,<6
    toml~=0.10
    astunparse~=1.6;python_version<'3.9'
    ipython
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.data_files]
share/jupyter/nbconvert/templates/literary =
    share/jupyter/nbconvert/templates/literary/conf.json
    share/jupyter/nbconvert/templates/literary/index.py.j2

[options.entry_points]
console_scripts =
    literary = literary.__main__:run
nbconvert.exporters =
    literary = literary.exporter:LiteraryPythonExporter

[bdist_wheel]
universal = 1
