[metadata]
name = literary
version = 3.0.2
description = Literate package development with Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agoose77/literary
author = Angus Hollands
author_email = goosey15@gmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    literate-programming
    jupyter
    notebooks
    nbconvert
project_urls =
    Bug Tracker = https://github.com/agoose77/literary/issues

[options]
package_dir =
    =lib
packages = find_namespace:
install_requires =
    nbformat[fast]>=4,<6
    nbclient>=0.5,<0.6
    nbconvert>=6,<7
    traitlets>=5,<6
    astunparse~=1.6;python_version<'3.9'
    ipython
    typing_extensions
    jupyter_core>=4.7,<4.8
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.packages.find]
where = lib

[options.data_files]
share/jupyter/nbconvert/templates/literary =
    share/jupyter/nbconvert/templates/literary/conf.json
    share/jupyter/nbconvert/templates/literary/index.py.j2

[options.entry_points]
console_scripts =
    literary = literary.commands.launcher:launch_new_instance

nbconvert.exporters =
    literary = literary.core.exporter:LiteraryExporter

[bdist_wheel]
universal = False
